--- a/Bitcoin_Analysis.ipynb
+++ b/Bitcoin_Analysis.ipynb
@@ -722,6 +722,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 137,
+   "id": "b4a985ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Bitcoin_sorted_df.to_csv('Bitcoin_scaled.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 118,
    "id": "14f591c6",
    "metadata": {},
@@ -1125,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "0f670c3c",
+   "id": "ba29db07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1386,7 +1396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e55ef6d",
+   "id": "9f52212a",
    "metadata": {},
    "outputs": [],
    "source": []
